<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.travellerquizapp.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="40dp">

        <TextView
            android:id="@+id/question_one_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:layout_marginTop="40dp"
            android:text="@string/question_one"
            android:textAlignment="center"
            android:textColor="#000"
            android:textSize="18sp" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/yes_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q1_ans1"
                android:textAppearance="?android:textAppearanceMedium" />

            <RadioButton
                android:id="@+id/no_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q1_ans2"
                android:textAppearance="?android:textAppearanceMedium" />
        </RadioGroup>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:onClick="goToSecondQuestion"
            android:text="@string/next" />

        <ImageView
            android:id="@+id/photo_love_travel"
            android:layout_width="300dp"
            android:layout_height="150dp"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="0dp"
            android:scaleType="fitXY"
            android:src="@drawable/Travel">

        </ImageView>

        <ProgressBar
            android:id="@+id/progress_bar"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="false"
            android:max="90"
            android:progress="10" />

    </LinearLayout>

</ScrollView>