<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.travellerquizapp.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/padding_linearLayoutF">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/textView_margin"
            android:layout_marginTop="@dimen/textView_margin"
            android:text="@string/congrats"
            android:textAlignment="center"
            android:textColor="@color/textColor"
            android:textSize="@dimen/congrats_textSize" />

        <ImageView
            android:id="@+id/photo_love_travel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/traveler">

        </ImageView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thanks"
            android:textAlignment="center"
            android:textColor="@color/textColor"
            android:textSize="@dimen/thanks_textSize" />

        <Button
            android:id="@+id/start_quiz"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:onClick="isNameProvided"
            android:text="@string/tryAgain"
            android:textSize="@dimen/tryAgain_textSize" />

    </LinearLayout>

</ScrollView>