<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.travellerquizapp.MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <!--name as input -->
    <EditText
        android:id="@+id/customer_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/customerName"
        android:inputType="textMultiLine" />
    <!--age as input -->
    <EditText
        android:id="@+id/age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/age"
        android:inputType="number" />
    </LinearLayout>


    <!--image as background-->
    <ImageView
        android:id="@+id/photo_love_travel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="center"
        android:src="@drawable/love_travel">

    </ImageView>

    <!--start quiz-->
    <Button
        android:id="@+id/start_quiz"
        android:layout_width="match_parent"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="420dp"
        android:layout_height="70sp"
        android:text="@string/start_quiz"
        android:onClick="startQuiz"
        android:textSize="36sp" />

    <ProgressBar
        android:id="@+id/progress_bar"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="false"
        android:layout_marginTop="500dp"
        android:max="90"
        android:progress="0"/>

</RelativeLayout>